# gtk-nix-rebuild

./: Cargo.toml  default.nix  meson.build
data/: meson.build  net.bleur.GtkRustTemplate.policy.in.in
s-helper/: Cargo.toml
s-helper/src/: meson.build
src/: lib.rs  main.rs
src/modules/: load.rs
src/ui/: mod.rs  window.rs
src/ui/rebuild/: rebuild_dialog.rs
