[package]
name = "gtk-rust-template"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "#description#"
homepage = "#website#"
repository = "#repository#"
authors = ["#author#"]
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
relm4-components = "0.9.1"
tracing = "0.1.41"
tracing-subscriber = "0.3"
nix-editor = "0.3.0"
nixpkgs-fmt = "1.3"
tracker = "0.2"
vte = { package = "vte4", version = "0.8" }
anyhow = "1.0.102"
nix-data = "0.0.3"
walkdir = "2.3"
serde_yaml = "0.9"
serde = { version = "1.0.228", features = ["derive"] }

[workspace]
members = [".", "smm-helper"]
default-members = [".", "smm-helper"]
